# webrtc-backend

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
configs/: development.env  production.env
scripts/: build  run_locally
src/: main.rs  webrtc.rs  websocket.rs
