[package]
name = "webrtc-backend"
version = "0.0.1"
edition = "2021"
authors = ["masivinho <contact@masivo.cc>"]
readme = "README.md"
license = "BSD"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { version = "0.3", default-features = false }
webrtc-unreliable = "0.5.3"